fix(css/_map_page): move z-index'es into `map-page`

--- a/assets/css/_cutout_overlay.scss
+++ b/assets/css/_cutout_overlay.scss
@@ -1,5 +1,4 @@
 .c-overlay-cutout {
-  z-index: 800; // Below controls, above map
   position: absolute;
   inset: 0px;
 
