--- a/assets/css/_map_page.scss
+++ b/assets/css/_map_page.scss
@@ -3,6 +3,8 @@ $map-page-search-panel-width: 24rem;
 $z-map-page-context: (
   "map": 100,
   "search-drawer": 200,
+  "overlay-cutout": 800,
+  "control-layer": 1000,
 );
 
 .c-map-page {
@@ -29,6 +31,16 @@ $z-map-page-context: (
   .c-vehicle-properties-card,
   .c-route-properties-card {
     margin: 1rem;
+  }
+
+  .c-overlay-cutout {
+    // Below controls, above map
+    z-index: map-get($z-map-page-context, "overlay-cutout");
+  }
+
+  .c-street-view-switch {
+    // Same control layer as leaflet controls
+    z-index: map-get($z-map-page-context, "control-layer");
   }
 }
 
