--- a/assets/css/map/controls/_street_view_switch.scss
+++ b/assets/css/map/controls/_street_view_switch.scss
@@ -4,7 +4,6 @@
   // Leaflet uses px for positioning of their controls so we use px here to match
   top: 10px;
   right: 55px;
-  z-index: 1000; // Same control layer as leaflet controls
   // #endregion
 
   // #region Look
